function(TRAWLER_ADD_TEST)
  set(oneValueArgs TEST)
  set(multiValueArgs SOURCES LIBS)
  cmake_parse_arguments(TRAWLER_ADD_TEST "" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )
  set(NAME "${TRAWLER_ADD_TEST_TEST}-test")
  add_executable("${NAME}" "${TRAWLER_ADD_TEST_SOURCES}")
  target_link_libraries("${NAME}" PRIVATE "${TRAWLER_ADD_TEST_LIBS}")
  set_target_properties("${NAME}" PROPERTIES CXX_CLANG_TIDY "")
  add_test("${NAME}" "${NAME}")
  set_target_properties("${NAME}" PROPERTIES CXX_STANDARD 17)  
  trawler_add_sanitizers(${NAME})
endfunction()

add_subdirectory(services)
